[package]
name = "wgpu_graphics-wasm-sample"
description = "A sample project for piston2d-wgpu_graphics running on WebAssembly"
version = "0.1.0"
authors = ["Kuroki Keiichiro <shinmili@users.noreply.github.com>"]
edition = "2018"
repository = "https://github.com/shinmili/wgpu_graphics-wasm-sample"
license = "MIT OR Apache-2.0"
resolver = "2"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }

console_log = "0.2"
log = "0.4"
web-sys = "0.3"
wasm-bindgen-futures = "0.4.28"

winit = { version = "0.25", features = ["web-sys"] }
piston = "0.53.0"
piston2d-graphics = "0.40"
piston2d-wgpu_graphics = { git = "https://github.com/shinmili/wgpu_graphics", branch = "wasm" }
wgpu = { version = "0.11", features = ["webgl"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
